# python-carve

./: Cargo.toml  README.md  carve.pyi  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs
tests/: test_carve.py  test_static_mode.py
